--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@ body {
     background-image: url(background.jpg);
     background-repeat: no-repeat;
     width: 100%;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 #image {
